---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Resurrect filter inserter as greedy inserter
    - Add thumbnail
    - Setup hidden surface
    - Start tracking placed greedy inserters
    - Prepare to use a mining drill as circuit trigger
    - Warn about the circuit network quirks
    - Step away from miner/resource for assembler/item
    - Stash vectored blueprint assembler
    - Setup the required hidden entities on the surface
    - Insert the initial blueprint
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 01. 11
  Info:
    - Initial commit