@@ -14,4 +14,4 @@ spoiled-priority-f=Greedy mode
 greedy-inserter=Greedy inserter
 
 [recipe-name]
-greedy-inserter--recipe=Greedy inserter blueprint pingpong
+greedy-inserter--recipe=Greedy inserter destruction trigger
