@@ -12,6 +12,7 @@ Date: ????
     - Stash vectored blueprint assembler
     - Setup the required hidden entities on the surface
     - Insert the initial blueprint
+    - Remove pingpong mechanic for inconsistent behaviour
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2025. 01. 11
